# integration

./: .gitignore  pyproject.toml
retree/: collapse.py  convertor.py  recombination.py  rewriter.py  tree.py  util.py
test/retree/: test_convertor.py  test_e2e.py  test_tree.py
test/retree/data/: nyc-taxi-green-dec-2016_d10_l376_n751.onnx  nyc-taxi-green-dec-2016_d10_l376_n751_out.onnx  nyc-taxi-green-dec-2016_t3_d2_l4_n7.onnx
