[project]
name = "integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "numpy==1.26.4",
    "onnx==1.14.1",
    "onnxruntime==1.16.3",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "scikit-learn==1.5.1",
]
